--- a/examples/hello-world-x86/Makefile
+++ b/examples/hello-world-x86/Makefile
@@ -1,6 +1,7 @@
 
 GENOS = ../..
-TARGET =PC
+TARGET =PC_multiboot
+CPU=x86
 
 OBJDIR = obj_$(TARGET)
 
@@ -21,8 +22,8 @@ OBJ = $(src:%.cpp=$(OBJDIR)/%.o)
 
 all: $(OBJDIR) $(OBJ) platform LINK
 	mv hello-world hello-world.$(TARGET)
-	objdump -Mintel -d hello-world.$(TARGET) > kkk
-
+	cp hello-world.$(TARGET) kernel
+	objdump -d kernel > kkk
 
 include $(GENOS)/invariant/Makefile.invariant
 include $(GENOS)/platform/$(TARGET)/Makefile.$(TARGET)
@@ -33,9 +34,14 @@ $(OBJDIR):
 	- mkdir $(OBJDIR)
 
 LINK:
-	$(CPP) $(CPPFLAGS)  $(LDFLAGS) $(OBJ) $(PLATFORMOBJ) -o hello-world
+	$(CPP) $(LDFLAGS)  $(OBJ) $(PLATFORMOBJ) -o hello-world
 	
 	
 clean:
 	- rm $(OBJDIR)/*.o
 	
+install: 
+	cp kernel /mnt/boot/kernel
+
+start:
+	qemu -hda ~/multiboot/hard_disk.img
