--- a/platform/PC_multiboot/Makefile.PC_multiboot
+++ b/platform/PC_multiboot/Makefile.PC_multiboot
@@ -25,13 +25,14 @@ OBJCOPY= objcopy
 AS=as
 
 # Флаги компилятора языка C
-CFLAGS= -O0
+CFLAGS= -O0  -m32
 
 # Флаги компоновщика
 LDFLAGS=-T $(GENOS)/platform/PC_multiboot/link.ld 
 
 # Флаги ассемблера
 ASFLAGS=--32
+#ASFLAGS=--64
 
 CPPFLAGS = $(CFLAGS) $(GENOSFLAGS) $(PLATFORMFLAGS)
 
