--- a/platform/PC_multiboot/Makefile.PC_multiboot
+++ b/platform/PC_multiboot/Makefile.PC_multiboot
@@ -25,7 +25,7 @@ OBJCOPY= objcopy
 AS=as
 
 # Флаги компилятора языка C
-CFLAGS= -O0  -m32
+CFLAGS= -O0  -m32 -nostdlib -fno-exceptions -fno-unwind-tables -fno-rtti
 
 # Флаги компоновщика
 LDFLAGS=-T $(GENOS)/platform/PC_multiboot/link.ld 
