--- a/platform/PC_multiboot/Makefile.PC_multiboot
+++ b/platform/PC_multiboot/Makefile.PC_multiboot
@@ -25,15 +25,15 @@ OBJCOPY= objcopy
 AS=as
 
 # Флаги компилятора языка C
-CFLAGS= -O0
+CFLAGS:= -O2 -fno-exceptions  
 
 # Флаги компоновщика
-LDFLAGS=-T $(GENOS)/platform/PC_multiboot/link.ld 
+LDFLAGS:=-T $(GENOS)/platform/PC_multiboot/link.ld  
 
 # Флаги ассемблера
-ASFLAGS=--32
+ASFLAGS:=--32
 
-CPPFLAGS = $(CFLAGS) $(GENOSFLAGS) $(PLATFORMFLAGS)
+CPPFLAGS:= $(CFLAGS) $(GENOSFLAGS) $(PLATFORMFLAGS)
 
 VPATH += $(GENOS)/platform/$(TARGET)
 
