--- a/platform/native/Makefile.native
+++ b/platform/native/Makefile.native
@@ -15,8 +15,8 @@ PLATFORMOBJ = $(PLATFORMSRCPP:%.cpp=$(OBJDIR)/%.o)
 
 CPP = g++
 
-CPPFLAGS = $(GENOSFLAGS) $(PLATFORMFLAGS) -fno-exceptions -fno-unwind-tables -fno-rtti -std=c++11
-
+CPPFLAGS = $(GENOSFLAGS) $(PLATFORMFLAGS)  -fno-unwind-tables -fno-rtti -std=c++11
+#-fno-exceptions
 VPATH += $(GENOS)/platform/native/module/strm 
 VPATH += $(GENOS)/platform/native
 
