--- a/platform/PC_multiboot/Makefile.PC_multiboot
+++ b/platform/PC_multiboot/Makefile.PC_multiboot
@@ -11,7 +11,7 @@ VPATH += $(GENOS)/platform/$(TARGET)/descriptor_tables
 
 PLATFORMFLAGS =  -I$(GENOS)/platform/$(TARGET) -I$(GENOS)/cpu/$(CPU)
 PLATFORMSRCPP := debug_putchar.cpp boot3.cpp error_platform.cpp  descriptor_tables.cpp timer.cpp \
-				keyscan.cpp pci_search.cpp
+				 pci_search.cpp
 PLATFORMSRCAS := gdt.S 	
 
 PLATFORMOBJ = $(PLATFORMSRCPP:%.cpp=$(OBJDIR)/%.o) 
